# Template-SDK

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  README.md
.github/workflows/: ci.yml
Code/: .gitignore  AUTHORS.md  CMakeLists.txt  README.md
Code/Bindings/: CMakeLists.txt
Code/Bindings/Python/: CMakeLists.txt
Code/Bindings/Python/Template-CPU/: CMakeLists.txt
Code/Bindings/Python/Template-CPU/src/: Binding.cpp  PrecompiledHeaders.h
Code/Bindings/Python/Template-GPU/: CMakeLists.txt
Code/Bindings/Python/Template-GPU/src/: Binding.cpp  PrecompiledHeaders.h
Code/Bindings/Python/TemplateCPU/: CMakeLists.txt
Code/Bindings/Python/TemplateCPU/src/: Binding.cpp
Code/Bindings/Python/TemplateGPU/: CMakeLists.txt
Code/Bindings/Python/TemplateGPU/src/: Binding.cpp
Code/Dependencies/: CMakeLists.txt
Code/Executables/: CMakeLists.txt
Code/Executables/Benchmark/: CMakeLists.txt
Code/Executables/Benchmark/src/: EntryPoint.cpp  PrecompiledHeaders.h
Code/Executables/Demonstration/: CMakeLists.txt
Code/Executables/Demonstration/src/: EntryPoint.cpp  PrecompiledHeaders.h  Version.h.in
Code/Libraries/: CMakeLists.txt
Code/Libraries/Template-CPU/: CMakeLists.txt
Code/Libraries/Template-CPU/doc/api/: Doxyfile.in
Code/Libraries/Template-CPU/include-api/byEAjksCom/Libraries/Template/CPU/: CObjectFactory.h  IObject.h  IObjectFactory.h  ObjectFactory.h  ObjectFactoryIF.h  ObjectIF.h  PrecompiledHeaders.h  PreprocessorMacros.h  Version.h.in
Code/Libraries/Template-CPU/include/byEAjksCom/Libraries/Template/CPU/: CDefaultObject.h  CObjectBase.h  DefaultObject.h  ObjectBase.h
Code/Libraries/Template-CPU/src/byEAjksCom/Libraries/Template/CPU/: CObjectFactory.cpp  DefaultObject.cpp  ObjectBase.cpp  ObjectFactory.cpp  ObjectFactoryIF.cpp  ObjectIF.cpp
Code/Libraries/Template-GPU/: CMakeLists.txt
Code/Libraries/Template-GPU/doc/api/: Doxyfile.in
Code/Libraries/Template-GPU/include-api/byEAjksCom/Libraries/Template/GPU/: CObjectFactory.h  IObject.h  IObjectFactory.h  ObjectFactory.h  ObjectFactoryIF.h  ObjectIF.h  PrecompiledHeaders.h  PreprocessorMacros.h  Version.h.in
Code/Libraries/Template-GPU/include/byEAjksCom/Libraries/Template/GPU/: CDefaultObject.h  CObjectBase.h  DefaultObject.h  ObjectBase.h
Code/Libraries/Template-GPU/src/byEAjksCom/Libraries/: TemplateGPU.cpp
Code/Libraries/Template-GPU/src/byEAjksCom/Libraries/Template/GPU/: CDefaultObject.cu  CObjectFactory.cpp  DefaultObject.cu  ObjectBase.cpp  ObjectFactory.cpp  ObjectFactoryIF.cpp  ObjectIF.cpp
Code/Libraries/TemplateCPU/: CMakeLists.txt
Code/Libraries/TemplateCPU/doc/api/: Doxyfile.in
Code/Libraries/TemplateCPU/include-api/byEAjksCom/Libraries/Template/CPU/: ObjectFactory.h  ObjectFactoryIF.h  ObjectIF.h  PreprocessorMacros.h  Version.h.in
Code/Libraries/TemplateCPU/include/byEAjksCom/Libraries/Template/CPU/: DefaultObject.h  ObjectBase.h
Code/Libraries/TemplateCPU/src/byEAjksCom/Libraries/Template/CPU/: DefaultObject.cpp  ObjectBase.cpp  ObjectFactory.cpp
Code/Libraries/TemplateGPU/: CMakeLists.txt
Code/Libraries/TemplateGPU/doc/api/: Doxyfile.in
Code/Libraries/TemplateGPU/include-api/byEAjksCom/Libraries/Template/GPU/: ObjectFactory.h  ObjectFactoryIF.h  ObjectIF.h  PreprocessorMacros.h  Version.h.in
Code/Libraries/TemplateGPU/include/byEAjksCom/Libraries/Template/GPU/: DefaultObject.h  ObjectBase.h
Code/Libraries/TemplateGPU/src/byEAjksCom/Libraries/: TemplateGPU.cpp
Code/Libraries/TemplateGPU/src/byEAjksCom/Libraries/Template/GPU/: DefaultObject.cu  ObjectBase.cpp  ObjectFactory.cpp
Code/Miscellaneous/Linux/DEBIAN/: postrm.in  preinst.in  prerm.in
Code/Miscellaneous/Linux/etc/ld.so.conf.d/: TemplateSDK.conf.in
Code/Miscellaneous/Linux/usr/local/lib/python3.11/dist-packages/: TemplateSDK.pth.in
Code/SDK/: CMakeLists.txt
Code/SDK/Bindings/: CMakeLists.txt
Code/SDK/Bindings/Python/Template-CPU/: CMakeLists.txt
Code/SDK/Bindings/Python/Template-CPU/src/: Binding.cpp
Code/SDK/Bindings/Python/Template-GPU/: CMakeLists.txt
Code/SDK/Bindings/Python/Template-GPU/src/: Binding.cpp
Code/SDK/Dependencies/: CMakeLists.txt
Code/SDK/Executables/: CMakeLists.txt
Code/SDK/Executables/Benchmark/: CMakeLists.txt
Code/SDK/Executables/Benchmark/src/: EntryPoint.cpp  Version.h.in
Code/SDK/Executables/Demonstration/: CMakeLists.txt
Code/SDK/Executables/Demonstration/src/: EntryPoint.cpp
Code/SDK/Libraries/: CMakeLists.txt
Code/SDK/Libraries/Template-CPU/: CMakeLists.txt
Code/SDK/Libraries/Template-CPU/include-api/byEAjksCom/Libraries/Template/CPU/: CObjectFactory.h  IObject.h  IObjectFactory.h  PreprocessorMacros.h  Version.h.in
Code/SDK/Libraries/Template-CPU/include/byEAjksCom/Libraries/Template/CPU/: CDefaultObject.h  CObjectBase.h
Code/SDK/Libraries/Template-CPU/src/byEAjksCom/Libraries/: SandBox-CPU.cpp
Code/SDK/Libraries/Template-CPU/src/byEAjksCom/Libraries/Template/CPU/: CObjectFactory.cpp
Code/SDK/Libraries/Template-GPU/: CMakeLists.txt
Code/SDK/Libraries/Template-GPU/doc/api/: Doxyfile.in
Code/SDK/Libraries/Template-GPU/include-api/byEAjksCom/Libraries/Template/GPU/: CObjectFactory.h  IObject.h  IObjectFactory.h  PreprocessorMacros.h  Version.h.in
Code/SDK/Libraries/Template-GPU/include/byEAjksCom/Libraries/Template/GPU/: CDefaultObject.h  CObjectBase.h
Code/SDK/Libraries/Template-GPU/src/byEAjksCom/Libraries/: Template-GPU.cpp
Code/SDK/Libraries/Template-GPU/src/byEAjksCom/Libraries/Template/GPU/: CDefaultObject.cu  CObjectFactory.cpp
DevOps/BareMetal/: .gitignore  Generate-Packages-Linux-CommandLine.bash  Generate-Packages-Linux-EclipseCDT4.bash  Generate-Packages-Linux-GNU-Compiler.bash  Generate-Packages-Linux-Intel-oneAPI.bash  Generate-Packages-Windows-CommandLine.cmd  Generate-Packages-Windows-EclipseCDT4.cmd  Generate-Packages-Windows-Intel-oneAPI.cmd  Generate-Packages-Windows-Microsoft-VisualStudio17.cmd  Generate-Packages-Windows-VisualStudio16.cmd  GeneratePackagesForLinuxUsingGnuCompiler.bash  GeneratePackagesForLinuxUsingIntelOneApi.bash  GeneratePackagesForLinuxUsingLlvmCLang.bash  (+6 more)
(+9 files in other folders)
